--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/png" href="media/icon.png"/>
     <title>Letter Game</title>
     <link rel="stylesheet" href="scripts/main-game/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="loader"></div>
@@ -16,6 +15,9 @@
       <h1 class="title2" id="score">Score: 0</h1>
       <h2 class="sTitle1" id="letters"></h2>
       <p class="text1" id="feedback">Press any button to start!</p>
+      
+      <button class="button1" onclick="toggleMobileMode()">Mobile mode</button>
+      <input id="mobileInput" type="text" placeholder="Type the text shown here">
     </div>
 
     <script src="scripts/main-game/script.js"></script>
