--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2 class="sTitle1" id="letters"></h2>
       <p class="text1" id="feedback">Press any button to start!</p>
       
-      <button class="button1" onclick="toggleMobileMode()">Mobile mode</button>
+      <button class="button1" id="button" onclick="toggleMobileMode()">Mobile mode</button>
       <input id="mobileInput" type="text" placeholder="Type the text shown here">
     </div>
 
